[gd_scene load_steps=28 format=2]

[ext_resource path="res://Ruby.tscn" type="PackedScene" id=1]
[ext_resource path="res://ForestObjects/OjiiTree.tscn" type="PackedScene" id=2]
[ext_resource path="res://Destination Sign.tscn" type="PackedScene" id=3]
[ext_resource path="res://ForestObjects/Tree.tscn" type="PackedScene" id=4]
[ext_resource path="res://Tihi.tscn" type="PackedScene" id=5]
[ext_resource path="res://WallAndFloorTiles.tres" type="MeshLibrary" id=6]
[ext_resource path="res://ForestObjects/FlippedTree.tscn" type="PackedScene" id=7]
[ext_resource path="res://ForestObjects/CrocoTree.tscn" type="PackedScene" id=8]
[ext_resource path="res://nootiest noot.glb" type="PackedScene" id=9]
[ext_resource path="res://RubyBattle.tscn" type="PackedScene" id=10]
[ext_resource path="res://Opponent.tscn" type="PackedScene" id=11]
[ext_resource path="res://Interactions/DialogueTest.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/Battle.gd" type="Script" id=13]
[ext_resource path="res://import/interface/theme/font/comfortaa_tips.tres" type="DynamicFont" id=14]
[ext_resource path="res://import/interface/theme/font/default_font_comfortaa.tres" type="DynamicFont" id=15]
[ext_resource path="res://scripts/Tihi.tres" type="Resource" id=16]
[ext_resource path="res://scripts/Spawner.gd" type="Script" id=17]

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.239441, 0.947306, -2.46673 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -6.13036, 179.939, -0.650771 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "shake"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.239441, 0.947306, -2.46673 ), Vector3( 0.239, 0.98, -2.467 ), Vector3( 0.239, 0.87, -2.467 ), Vector3( 0.239441, 0.947306, -2.46673 ) ]
}

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.494118, 1, 0.294118, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.501961, 0.501961, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.294118 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "enemy_damaged"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Battle" type="Spatial"]
script = ExtResource( 13 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
enemy = ExtResource( 16 )

[node name="Tree" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.14336, 1.0497, 2.0735 )

[node name="Ruby" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.357145, 0 )

[node name="Sign" parent="." instance=ExtResource( 3 )]
transform = Transform( 0.976035, 0, -0.217615, 0, 1, 0, 0.217615, 0, 0.976035, 1.90098, 0.469694, 1.70769 )

[node name="Tree2" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.61674, 1.0277, 1.11795 )

[node name="CrocoTree" parent="." instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.51777, 0.987236, 2.25772 )

[node name="OjiiTree" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.38143, 1.01132, 0.571685 )

[node name="FlppedTree" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.06098, 1.03682, 2.64914 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( -0.999934, -0.0114715, 0.0010586, -0.0112929, 0.994217, 0.106791, -0.00227754, 0.106772, -0.994281, 0.239441, 0.947306, -2.46673 )
fov = 62.2207
target = NodePath("../PlayerPanel/Player/CameraTarget")
speed = 7.0

[node name="PartnerCamera" type="AnimationPlayer" parent="InterpolatedCamera"]
anims/RESET = SubResource( 9 )
anims/shake = SubResource( 10 )

[node name="nootiest noot" parent="." instance=ExtResource( 9 )]
transform = Transform( -0.45, 0, -6.79481e-08, 0, 0.45, 0, 6.79481e-08, 0, -0.45, 0.661344, 0.258819, 2.90719 )

[node name="GridMap" type="GridMap" parent="."]
mesh_library = ExtResource( 6 )
data = {
"cells": PoolIntArray( -65536, 0, 1, -65535, 0, 1, -65534, 0, 1, -65533, 0, 1, -65532, 0, 1, -65531, 0, 1, -65530, 0, 1, -65529, 0, 1, -65528, 0, 1, -65527, 0, 1, -9, 0, 1, -8, 0, 1, -7, 0, 1, -6, 0, 1, -5, 0, 1, -4, 0, 1, -3, 0, 1, -2, 0, 1, -1, 0, 1, -65536, 1, 1, -65535, 1, 1, -65534, 1, 1, -65533, 1, 1, -65532, 1, 1, -65531, 1, 1, -65530, 1, 1, -65529, 1, 1, -65528, 1, 1, -65527, 1, 1, -9, 1, 1, -8, 1, 1, -7, 1, 1, -6, 1, 1, -5, 1, 1, -4, 1, 1, -3, 1, 1, -2, 1, 1, -1, 1, 1, -65536, 2, 1, -65535, 2, 1, -65534, 2, 1, -65533, 2, 1, -65532, 2, 1, -65531, 2, 1, -65530, 2, 1, -65529, 2, 1, -65528, 2, 1, -65527, 2, 1, -9, 2, 1, -8, 2, 1, -7, 2, 1, -6, 2, 1, -5, 2, 1, -4, 2, 1, -3, 2, 1, -2, 2, 1, -1, 2, 1, -65536, 3, 1, -65535, 3, 1, -65534, 3, 1, -65533, 3, 1, -65532, 3, 1, -65531, 3, 1, -65530, 3, 1, -65529, 3, 1, -65528, 3, 1, -65527, 3, 1, -9, 3, 1, -8, 3, 1, -7, 3, 1, -6, 3, 1, -5, 3, 1, -4, 3, 1, -3, 3, 1, -2, 3, 1, -1, 3, 1, -65536, 4, 1, -65535, 4, 1, -65534, 4, 1, -65533, 4, 1, -65532, 4, 1, -65531, 4, 1, -65530, 4, 1, -65529, 4, 1, -65528, 4, 1, -65527, 4, 1, -9, 4, 1, -8, 4, 1, -7, 4, 1, -6, 4, 1, -5, 4, 1, -4, 4, 1, -3, 4, 1, -2, 4, 1, -1, 4, 1, -65536, 5, 1, -65535, 5, 1, -65534, 5, 1, -65533, 5, 1, -65532, 5, 1, -65531, 5, 1, -65530, 5, 1, -65529, 5, 1, -65528, 5, 1, -65527, 5, 1, -9, 5, 1, -8, 5, 1, -7, 5, 1, -6, 5, 1, -5, 5, 1, -4, 5, 1, -3, 5, 1, -2, 5, 1, -1, 5, 1, -65536, 6, 1, -65535, 6, 1, -65534, 6, 1, -65533, 6, 1, -65532, 6, 1, -65531, 6, 1, -65530, 6, 1, -65529, 6, 1, -65528, 6, 1, -65527, 6, 1, -9, 6, 1, -8, 6, 1, -7, 6, 1, -6, 6, 1, -5, 6, 1, -4, 6, 1, -3, 6, 1, -2, 6, 1, -1, 6, 1, -65536, 7, 1, -65535, 7, 1, -65534, 7, 1, -65533, 7, 1, -65532, 7, 1, -65531, 7, 1, -65530, 7, 1, -65529, 7, 1, -65528, 7, 1, -65527, 7, 1, -9, 7, 1, -8, 7, 1, -7, 7, 1, -6, 7, 1, -5, 7, 1, -4, 7, 1, -3, 7, 1, -2, 7, 1, -1, 7, 1, -65536, 8, 1, -65535, 8, 1, -65534, 8, 1, -65533, 8, 1, -65532, 8, 1, -65531, 8, 1, -65530, 8, 1, -65529, 8, 1, -65528, 8, 1, -65527, 8, 1, -9, 8, 1, -8, 8, 1, -7, 8, 1, -6, 8, 1, -5, 8, 1, -4, 8, 1, -3, 8, 1, -2, 8, 1, -1, 8, 1, -65536, 9, 1, -65535, 9, 1, -65534, 9, 1, -65533, 9, 1, -65532, 9, 1, -65531, 9, 1, -65530, 9, 1, -9, 9, 1, -8, 9, 1, -7, 9, 1, -6, 9, 1, -5, 9, 1, -4, 9, 1, -3, 9, 1, -2, 9, 1, -1, 9, 1, -65536, 65525, 1, -65535, 65525, 1, -65534, 65525, 1, -65533, 65525, 1, -65532, 65525, 1, -65531, 65525, 1, -65530, 65525, 1, -65529, 65525, 1, -65528, 65525, 1, -65527, 65525, 1, -9, 65525, 1, -8, 65525, 1, -7, 65525, 1, -6, 65525, 1, -5, 65525, 1, -4, 65525, 1, -3, 65525, 1, -2, 65525, 1, -1, 65525, 1, -65536, 65526, 1, -65535, 65526, 1, -65534, 65526, 1, -65533, 65526, 1, -65532, 65526, 1, -65531, 65526, 1, -65530, 65526, 1, -65529, 65526, 1, -65528, 65526, 1, -65527, 65526, 1, -9, 65526, 1, -8, 65526, 1, -7, 65526, 1, -6, 65526, 1, -5, 65526, 1, -4, 65526, 1, -3, 65526, 1, -2, 65526, 1, -1, 65526, 1, -65536, 65527, 1, -65535, 65527, 1, -65534, 65527, 1, -65533, 65527, 1, -65532, 65527, 1, -65531, 65527, 1, -65530, 65527, 1, -65529, 65527, 1, -65528, 65527, 1, -65527, 65527, 1, -9, 65527, 1, -8, 65527, 1, -7, 65527, 1, -6, 65527, 1, -5, 65527, 1, -4, 65527, 1, -3, 65527, 1, -2, 65527, 1, -1, 65527, 1, -65536, 65528, 1, -65535, 65528, 1, -65534, 65528, 1, -65533, 65528, 1, -65532, 65528, 1, -65531, 65528, 1, -65530, 65528, 1, -65529, 65528, 1, -65528, 65528, 1, -65527, 65528, 1, -9, 65528, 1, -8, 65528, 1, -7, 65528, 1, -6, 65528, 1, -5, 65528, 1, -4, 65528, 1, -3, 65528, 1, -2, 65528, 1, -1, 65528, 1, -65536, 65529, 1, -65535, 65529, 1, -65534, 65529, 1, -65533, 65529, 1, -65532, 65529, 1, -65531, 65529, 1, -65530, 65529, 1, -65529, 65529, 1, -65528, 65529, 1, -65527, 65529, 1, -9, 65529, 1, -8, 65529, 1, -7, 65529, 1, -6, 65529, 1, -5, 65529, 1, -4, 65529, 1, -3, 65529, 1, -2, 65529, 1, -1, 65529, 1, -65536, 65530, 1, -65535, 65530, 1, -65534, 65530, 1, -65533, 65530, 1, -65532, 65530, 1, -65531, 65530, 1, -65530, 65530, 1, -65529, 65530, 1, -65528, 65530, 1, -65527, 65530, 1, -9, 65530, 1, -8, 65530, 1, -7, 65530, 1, -6, 65530, 1, -5, 65530, 1, -4, 65530, 1, -3, 65530, 1, -2, 65530, 1, -1, 65530, 1, -65536, 65531, 1, -65535, 65531, 1, -65534, 65531, 1, -65533, 65531, 1, -65532, 65531, 1, -65531, 65531, 1, -65530, 65531, 1, -65529, 65531, 1, -65528, 65531, 1, -65527, 65531, 1, -9, 65531, 1, -8, 65531, 1, -7, 65531, 1, -6, 65531, 1, -5, 65531, 1, -4, 65531, 1, -3, 65531, 1, -2, 65531, 1, -1, 65531, 1, -65536, 65532, 1, -65535, 65532, 1, -65534, 65532, 1, -65533, 65532, 1, -65532, 65532, 1, -65531, 65532, 1, -65530, 65532, 1, -65529, 65532, 1, -65528, 65532, 1, -65527, 65532, 1, -9, 65532, 1, -8, 65532, 1, -7, 65532, 1, -6, 65532, 1, -5, 65532, 1, -4, 65532, 1, -3, 65532, 1, -2, 65532, 1, -1, 65532, 1, -65536, 65533, 1, -65535, 65533, 1, -65534, 65533, 1, -65533, 65533, 1, -65532, 65533, 1, -65531, 65533, 1, -65530, 65533, 1, -65529, 65533, 1, -65528, 65533, 1, -65527, 65533, 1, -9, 65533, 1, -8, 65533, 1, -7, 65533, 1, -6, 65533, 1, -5, 65533, 1, -4, 65533, 1, -3, 65533, 1, -2, 65533, 1, -1, 65533, 1, -65536, 65534, 1, -65535, 65534, 1, -65534, 65534, 1, -65533, 65534, 1, -65532, 65534, 1, -65531, 65534, 1, -65530, 65534, 1, -65529, 65534, 1, -65528, 65534, 1, -65527, 65534, 1, -9, 65534, 1, -8, 65534, 1, -7, 65534, 1, -6, 65534, 1, -5, 65534, 1, -4, 65534, 1, -3, 65534, 1, -2, 65534, 1, -1, 65534, 1, -65536, 65535, 1, -65535, 65535, 1, -65534, 65535, 1, -65533, 65535, 1, -65532, 65535, 1, -65531, 65535, 1, -65530, 65535, 1, -65529, 65535, 1, -65528, 65535, 1, -65527, 65535, 1, -9, 65535, 1, -8, 65535, 1, -7, 65535, 1, -6, 65535, 1, -5, 65535, 1, -4, 65535, 1, -3, 65535, 1, -2, 65535, 1, -1, 65535, 1 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, -1, 0 )
}

[node name="Spawner" type="Spatial" parent="."]
script = ExtResource( 17 )

[node name="DialogueTest" parent="Spawner" instance=ExtResource( 12 )]

[node name="EnemyContainer" type="VBoxContainer" parent="."]
margin_left = 722.0
margin_top = 492.0
margin_right = 884.0
margin_bottom = 553.0

[node name="Opponent" parent="EnemyContainer" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.12487, 0.200798, 0 )

[node name="Enemy" parent="EnemyContainer" instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.444421, 0.13015, -0.357985 )

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
margin_right = 162.0
margin_bottom = 6.0
rect_min_size = Vector2( 0, 6 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
margin_left = -20.0
margin_top = 12.0
margin_right = 81.0
margin_bottom = 38.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 14 )
text = "HP:25/50"
align = 1

[node name="PlayerPanel" type="Panel" parent="."]
margin_left = 111.0
margin_top = 480.0
margin_right = 345.0
margin_bottom = 531.0
custom_styles/panel = SubResource( 6 )

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -45.0
alignment = 1

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
margin_right = 115.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 14 )
text = "Player
"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
margin_left = 119.0
margin_top = 13.0
margin_right = 234.0
margin_bottom = 19.0
rect_min_size = Vector2( 0, 6 )
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
margin_left = -20.0
margin_top = 12.0
margin_right = 81.0
margin_bottom = 38.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 14 )
text = "HP:25/50"
align = 1

[node name="Player" parent="PlayerPanel" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.94459, 0.233753, -0.0357566 )

[node name="CameraTarget" type="Spatial" parent="PlayerPanel/Player"]
transform = Transform( -1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0.172928, -2.84778 )

[node name="OmniLight" type="OmniLight" parent="PlayerPanel/Player"]
transform = Transform( 1, -4.18429e-10, 6.69945e-11, 4.07454e-10, 0.992864, 0.119253, -1.16415e-10, -0.119253, 0.992864, 0.392291, 1.38858, -0.578836 )
light_energy = 4.693
light_indirect_energy = 2.761
light_specular = 0.486
shadow_enabled = true

[node name="Partner" parent="PlayerPanel" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.21746, 0.13015, -0.357985 )

[node name="ActionPanel" type="Panel" parent="."]
margin_left = 91.0
margin_top = 124.0
margin_right = 926.0
margin_bottom = 184.0

[node name="Action" type="HBoxContainer" parent="ActionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 2.0
margin_bottom = 2.0
alignment = 1

[node name="Attack" type="Button" parent="ActionPanel/Action"]
margin_right = 275.0
margin_bottom = 60.0
focus_mode = 0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 14 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Attack"

[node name="Heal" type="Button" parent="ActionPanel/Action"]
margin_left = 279.0
margin_right = 555.0
margin_bottom = 60.0
focus_mode = 0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 14 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Heal"

[node name="Run" type="Button" parent="ActionPanel/Action"]
margin_left = 559.0
margin_right = 835.0
margin_bottom = 60.0
focus_mode = 0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 14 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Run"

[node name="TextBox" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 117.0
margin_right = -29.0
margin_bottom = -402.0
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="TextBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 15 )
text = "A wild Tihi appeared!
"

[node name="Ticker" type="Label" parent="TextBox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -35.0
margin_top = -44.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 15 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 7 )
anims/enemy_damaged = SubResource( 8 )

[connection signal="pressed" from="ActionPanel/Action/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionPanel/Action/Heal" to="." method="_on_Heal_pressed"]
[connection signal="pressed" from="ActionPanel/Action/Run" to="." method="_on_Run_pressed"]
